--- a/src/main/webapp/app/entities/comment/comment-update.component.html
+++ b/src/main/webapp/app/entities/comment/comment-update.component.html
@@ -16,6 +16,20 @@
                     <input type="text" class="form-control" name="text" id="field_text"
                            formControlName="text"/>
                 </div>
+
+                <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="nidAuxHistoiresApp.comment.book" for="field_book">Book</label>
+                    <select class="form-control" id="field_book" name="book" formControlName="bookId">
+                        <option [ngValue]="bookOption.id" *ngFor="let bookOption of books; trackBy: trackById">{{ bookOption.id + " " + bookOption.name }}</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="nidAuxHistoiresApp.comment.user" for="field_user">User</label>
+                    <select class="form-control" id="field_user" name="user" formControlName="userLogin">
+                        <option [ngValue]="userOption.login" *ngFor="let userOption of users; trackBy: trackById">{{ userOption.id + " " + userOption.login }}</option>
+                    </select>
+                </div>
             </div>
 
             <div>
