--- a/src/main/webapp/app/entities/part/part-update.component.html
+++ b/src/main/webapp/app/entities/part/part-update.component.html
@@ -40,7 +40,7 @@
                     <label class="form-control-label" jhiTranslate="nidAuxHistoiresApp.part.book" for="field_book">Book</label>
                     <select class="form-control" id="field_book" name="book" formControlName="bookId">
                         <option [ngValue]="null"></option>
-                        <option [ngValue]="bookOption.id" *ngFor="let bookOption of books; trackBy: trackById">{{ bookOption.name + " " + bookOption.id }}</option>
+                        <option [ngValue]="bookOption.id" *ngFor="let bookOption of books; trackBy: trackById">{{ bookOption.id + " " + bookOption.name }}</option>
                     </select>
                 </div>
             </div>
