--- a/src/main/webapp/app/entities/book/book-update.component.html
+++ b/src/main/webapp/app/entities/book/book-update.component.html
@@ -20,7 +20,7 @@
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="nidAuxHistoiresApp.book.author" for="field_author">Author</label>
                     <input type="text" class="form-control" name="author" id="field_author"
-                           formControlName="author"/>
+                           formControlName="authorId"/>
                 </div>
 
                 <div class="form-group">
