--- a/src/main/webapp/app/account/account.component.html
+++ b/src/main/webapp/app/account/account.component.html
@@ -1,5 +1,21 @@
 <div>
     <div class="row justify-content-center">
-        <div>It works</div>
+        <div class="col-md-8">
+            <h2 jhiTranslate="account.title" [translateValues]="{ username: account.login }" *ngIf="account">Profile of [<b>{{ account.login }}</b>]</h2>
+            <div>
+                <!--Profil-->
+                <p jhiTranslate="account.lastName" [translateValues]="{ lastName: account.lastName }" >Last name: {{account.lastName}}</p>
+                <p jhiTranslate="account.firstName" [translateValues]="{ firstName: account.firstName }" >First name: {{account.firstName}}</p>
+                <p jhiTranslate="account.email" [translateValues]="{ email: account.email }" >E-Mail: {{account.email}}</p>
+                <!--Présentation-->
+                <!--Oeuvres-->
+                <div>
+                    <p jhiTranslate="account.bookNumber" [translateValues]="{ number: books.length }" >Number of books: {{books.length}}</p>
+                    <ul>
+                        <li *ngFor="let book of books"><a routerLink="/reader/book/{{ book.id }}">{{book.name}}</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
