Add presentation to profile

--- a/src/main/webapp/app/account/account.component.html
+++ b/src/main/webapp/app/account/account.component.html
@@ -8,6 +8,7 @@
                 <p jhiTranslate="account.firstName" [translateValues]="{ firstName: account.firstName }" >First name: {{account.firstName}}</p>
                 <p jhiTranslate="account.email" [translateValues]="{ email: account.email }" >E-Mail: {{account.email}}</p>
                 <!--Présentation-->
+                <p jhiTranslate="account.introduction" [translateValues]="{ introduction: account.introduction }" >Introduction: {{account.introduction}}</p>
                 <!--Oeuvres-->
                 <div>
                     <p jhiTranslate="account.bookNumber" [translateValues]="{ number: books.length }" >Number of books: {{books.length}}</p>
