--- a/src/main/webapp/content/scss/variables.scss
+++ b/src/main/webapp/content/scss/variables.scss
@@ -19,5 +19,6 @@ $screen_w_s: 400px;
 $screen_w_m: 600px;
 $screen_w_l: 850px;
 $screen_w_xl: 1370px;
+$screen_w_xxl: 1450px;
 
 $height_nav: calc(100vh - 102px);
