Add comments page

--- a/src/main/webapp/app/authors/authors.component.html
+++ b/src/main/webapp/app/authors/authors.component.html
@@ -5,7 +5,7 @@
             <thead>
                 <tr>
                     <th (click)="sort(fields.LOGIN)"><span jhiTranslate="authors.filter.author">Author</span> <fa-icon icon="sort" *ngIf="showIcon(fields.LOGIN, icons.BOTH)"></fa-icon><fa-icon icon="sort-up" *ngIf="showIcon(fields.LOGIN, icons.UP)"></fa-icon><fa-icon icon="sort-down" *ngIf="showIcon(fields.LOGIN, icons.DOWN)"></fa-icon></th>
-                    <th (click)="sort(fields.BOOKS)" ><span jhiTranslate="authors.filter.books">Books</span> </span> <fa-icon icon="sort" *ngIf="showIcon(fields.BOOKS, icons.BOTH)"></fa-icon><fa-icon icon="sort-up" *ngIf="showIcon(fields.BOOKS, icons.UP)"></fa-icon><fa-icon icon="sort-down" *ngIf="showIcon(fields.BOOKS, icons.DOWN)"></fa-icon></th>
+                    <th (click)="sort(fields.BOOKS)" ><span jhiTranslate="authors.filter.books">Books</span> <fa-icon icon="sort" *ngIf="showIcon(fields.BOOKS, icons.BOTH)"></fa-icon><fa-icon icon="sort-up" *ngIf="showIcon(fields.BOOKS, icons.UP)"></fa-icon><fa-icon icon="sort-down" *ngIf="showIcon(fields.BOOKS, icons.DOWN)"></fa-icon></th>
                 </tr>
             </thead>
             <tbody>
