--- a/src/main/webapp/app/layouts/navbar/navbar.responsive.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.responsive.scss
@@ -1,6 +1,6 @@
 @import '../../../content/scss/variables.scss';
 
-@media only screen and (max-width: $screen_w_xxl) {
+@media only screen and (max-width: $screen_w_xxl) and (min-width: $screen_w_tl) {
   .nav-link {
     padding: 0.2vw !important;
   }
