Update books management

--- a/src/main/webapp/app/home/help/help.component.html
+++ b/src/main/webapp/app/home/help/help.component.html
@@ -2,26 +2,24 @@
 	<article>
 		<h1 jhiTranslate="help.title"></h1>
 		<div>
+			<h2 jhiTranslate="help.sharing.title"></h2>
+			<p jhiTranslate="help.sharing.body" [translateValues]="{ discordUrl: discordUrl }"></p>
+		</div>
+		<div>
+			<h2 jhiTranslate="help.B_Reading.title"></h2>
+			<p jhiTranslate="help.B_Reading.body" [translateValues]="{ discordUrl: discordUrl }"></p>
+		</div>
+		<div>
 			<h2 jhiTranslate="help.accessibility.title"></h2>
 			<p jhiTranslate="help.accessibility.body" [translateValues]="{ discordUrl: discordUrl }"></p>
 		</div>
 		<div>
 			<h2 jhiTranslate="help.download.title"></h2>
-			<p jhiTranslate="help.download.body1"></p>
-			<fa-icon icon="download"></fa-icon>
-			<p jhiTranslate="help.download.body2"></p>
-		</div>
-		<div>
-			<h2 jhiTranslate="help.convert.title"></h2>
-			<p jhiTranslate="help.convert.body"></p>
+			<p jhiTranslate="help.download.body"></p>
 		</div>
 		<div>
 			<h2 jhiTranslate="help.generators.title"></h2>
 			<p jhiTranslate="help.generators.body" [translateValues]="{ discordUrl: discordUrl }"></p>
-		</div>
-		<div>
-			<h2 jhiTranslate="help.sharing.title"></h2>
-			<p jhiTranslate="help.sharing.body" [translateValues]="{ discordUrl: discordUrl }"></p>
 		</div>
 	</article>
 </div>
