--- a/src/main/webapp/app/account/account.component.html
+++ b/src/main/webapp/app/account/account.component.html
@@ -12,9 +12,37 @@
                 <!--Oeuvres-->
                 <div>
                     <p jhiTranslate="account.bookNumber" [translateValues]="{ number: books.length }" >Number of books: {{books.length}}</p>
-                    <ul>
-                        <li *ngFor="let book of books"><a routerLink="/reader/book/{{ book.id }}">{{book.name}}</a></li>
-                    </ul>
+                    
+                    
+                    
+                    <div class="table-responsive" id="entities" *ngIf="books && books.length > 0">
+                        <table class="table table-striped" aria-describedby="page-heading">
+                            <tbody>
+                                <tr *ngFor="let book of books">
+                                    <td>{{ book.name }}</td>
+                                    <td class="text-right">
+                                        <div class="btn-group">
+                                            <button type="submit" (click)="toggleActive(book)"
+                                                    class="btn btn-info btn-sm">
+                                                <span class="d-none d-md-inline" jhiTranslate="account.book.visibility">Visibility :</span>
+                                                <fa-icon icon="eye" *ngIf="book.visibility"></fa-icon>
+                                                <fa-icon icon="eye-slash" *ngIf="!book.visibility"></fa-icon>
+                                            </button>
+                
+                                            <button type="submit" (click)="delete(book)"
+                                                    class="btn btn-danger btn-sm">
+                                                <fa-icon icon="times"></fa-icon>
+                                                <span class="d-none d-md-inline" jhiTranslate="account.book.delete">Delete</span>
+                                            </button>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+
+
                 </div>
             </div>
         </div>
