--- a/src/main/webapp/app/entities/book/book-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/book/book-delete-dialog.component.html
@@ -9,7 +9,7 @@
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
 
-        <p id="jhi-delete-book-heading" jhiTranslate="nidAuxHistoiresApp.book.delete.question" [translateValues]="{ id: book.id }">Are you sure you want to delete this Book?</p>
+        <p id="jhi-delete-book-heading" jhiTranslate="nidAuxHistoiresApp.book.delete.question" [translateValues]="{ name: book.name }">Are you sure you want to delete this Book?</p>
     </div>
 
     <div class="modal-footer">
