--- a/src/main/webapp/app/generators/idea-generator/idea-generator.component.html
+++ b/src/main/webapp/app/generators/idea-generator/idea-generator.component.html
@@ -13,17 +13,17 @@
 						<div *ngIf="ideaForm.get('generationNumber')!.invalid && (ideaForm.get('generationNumber')!.dirty || ideaForm.get('generationNumber')!.touched)" >
 							<small class="form-text text-danger"
 									*ngIf="ideaForm.get('generationNumber')?.errors?.required"
-									jhiTranslate="nidAuxHistoiresApp.idea.validation.required">
+									jhiTranslate="generator.idea.validation.required">
 								A number of ideas is required.
 							</small>
 							<small class="form-text text-danger"
 									*ngIf="ideaForm.get('generationNumber')?.errors?.min"
-									jhiTranslate="nidAuxHistoiresApp.idea.validation.min">
+									jhiTranslate="generator.idea.validation.min">
 								Must be greater than 0.
 							</small>
 							<small class="form-text text-danger"
 									*ngIf="ideaForm.get('generationNumber')?.errors?.max"
-									jhiTranslate="nidAuxHistoiresApp.idea.validation.max">
+									jhiTranslate="generator.idea.validation.max">
 								Must be lesser than 13.
 							</small>
 						</div>
